<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="android.view.View" />

        <variable
            name="viewModel"
            type="com.arinal.ui.MainViewModel" />
    </data>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/app_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:paddingBottom="@dimen/_8sdp">

            <com.google.android.material.appbar.CollapsingToolbarLayout
                android:id="@+id/collapsing_toolbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:contentScrim="@color/white"
                app:layout_scrollFlags="scroll|exitUntilCollapsed"
                app:title="@string/app_name">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_32sdp"
                    android:gravity="center"
                    android:paddingBottom="@dimen/_16sdp"
                    android:text="@string/app_name"
                    android:textSize="@dimen/text_24"
                    android:textStyle="bold"
                    app:layout_collapseMode="parallax"
                    tools:visibility="invisible" />

                <androidx.appcompat.widget.Toolbar
                    android:id="@+id/toolbar"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_32sdp"
                    android:paddingTop="@dimen/_8sdp"
                    app:layout_collapseMode="pin"
                    app:layout_scrollFlags="scroll|enterAlways" />
            </com.google.android.material.appbar.CollapsingToolbarLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/et_search"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_14sdp"
                    android:layout_marginEnd="@dimen/_14sdp"
                    android:drawableStart="@drawable/ic_search"
                    android:drawablePadding="@dimen/_8sdp"
                    android:hint="@string/search_github_users"
                    android:inputType="text"
                    android:text="@={viewModel.searchQuery}"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:ignore="Autofill,LabelFor" />

                <ImageButton
                    android:id="@+id/btn_clear_search"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="?selectableItemBackground"
                    android:contentDescription="@string/clear"
                    android:onClick="@{()->viewModel.cancelSearch()}"
                    android:padding="@dimen/_5sdp"
                    android:src="@drawable/ic_close"
                    android:visibility="@{!viewModel.searchQuery.empty ? View.VISIBLE : View.GONE}"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="@+id/et_search"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </com.google.android.material.appbar.AppBarLayout>

        <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
            android:id="@+id/swipe_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:bindIsEnabled="@{!viewModel.isLoading}"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <Space
                    android:id="@+id/spc_progress_bar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/value_8"
                    app:layout_constraintBottom_toTopOf="parent" />

                <ProgressBar
                    android:id="@+id/progress_bar"
                    style="@style/Base.Widget.AppCompat.ProgressBar.Horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:indeterminate="true"
                    android:visibility="@{viewModel.isLoading ? View.VISIBLE : View.GONE}"
                    app:layout_constraintTop_toTopOf="@id/spc_progress_bar" />

                <ScrollView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:nestedScrollingEnabled="true"
                    android:overScrollMode="never"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:ignore="UnusedAttribute">

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <com.facebook.shimmer.ShimmerFrameLayout
                            android:id="@+id/shimmer"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@color/white"
                            app:bindLoading="@{viewModel.isLoading &amp;&amp; (viewModel.userList.empty || (!viewModel.searchQuery.empty &amp;&amp; viewModel.searchList.empty))}"
                            app:layout_constraintTop_toTopOf="parent"
                            app:shimmer_duration="800"
                            tools:visibility="gone">

                            <androidx.recyclerview.widget.RecyclerView
                                android:id="@+id/rv_shimmer"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:overScrollMode="never"
                                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                                tools:itemCount="20"
                                tools:listitem="@layout/item_shimmer_list" />
                        </com.facebook.shimmer.ShimmerFrameLayout>

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_margin="@dimen/_24sdp"
                            android:drawablePadding="@dimen/_4sdp"
                            android:gravity="center_horizontal"
                            android:text="@string/swipe_down_to_refresh"
                            android:textSize="@dimen/text_16"
                            android:textStyle="bold"
                            android:visibility="@{!viewModel.errorMessage.empty &amp;&amp; !viewModel.isLoading ? View.VISIBLE : View.GONE}"
                            app:drawableBottomCompat="@drawable/ic_arrow_down"
                            app:layout_constraintTop_toTopOf="parent"
                            tools:visibility="gone" />

                        <TextView
                            android:id="@+id/tv_message"
                            android:layout_width="match_parent"
                            android:layout_height="@dimen/_250sdp"
                            android:layout_margin="@dimen/_24sdp"
                            android:gravity="center"
                            android:text="@{viewModel.errorMessage}"
                            android:textSize="@dimen/text_24"
                            android:visibility="@{!viewModel.errorMessage.empty &amp;&amp; !viewModel.isLoading ? View.VISIBLE : View.GONE}"
                            app:layout_constraintTop_toTopOf="parent"
                            tools:visibility="gone" />

                        <androidx.recyclerview.widget.RecyclerView
                            android:id="@+id/rv_users"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:overScrollMode="never"
                            android:visibility="@{((viewModel.searchQuery.empty &amp;&amp; !viewModel.userList.empty) || (!viewModel.searchQuery.empty &amp;&amp; !viewModel.searchList.empty)) &amp;&amp; viewModel.errorMessage.empty ? View.VISIBLE : View.GONE}"
                            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                            app:layout_constraintTop_toTopOf="parent"
                            tools:itemCount="20"
                            tools:listitem="@layout/item_users" />
                    </androidx.constraintlayout.widget.ConstraintLayout>
                </ScrollView>
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab_scroll"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end|bottom"
            android:layout_margin="@dimen/_16sdp"
            android:contentDescription="@string/go_to_top"
            android:onClick="@{()->viewModel.goToTop()}"
            android:src="@drawable/ic_arrow_up"
            app:bindShowing="@{!viewModel.userList.empty &amp;&amp; viewModel.errorMessage.empty}"
            app:fabSize="mini"
            app:tint="@null" />
    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>
