<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="android.view.View" />

        <variable
            name="viewModel"
            type="com.arinal.ui.MainViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
            android:id="@+id/swipe_layout"
            android:layout_width="match_parent"
            android:layout_height="@dimen/match_constraint"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/toolbar">

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:overScrollMode="never">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <androidx.constraintlayout.widget.Group
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:visibility="@{!viewModel.isLoading &amp;&amp; viewModel.errorMessage.empty ? View.VISIBLE : View.GONE}"
                        app:constraint_referenced_ids="iv_avatar, tv_name, tv_username, v_separator" />

                    <ImageView
                        android:id="@+id/iv_avatar"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:adjustViewBounds="true"
                        android:background="@color/color_light"
                        android:contentDescription="@string/avatar"
                        android:minHeight="@dimen/_250sdp"
                        app:bindImageUrl="@{viewModel.selectedUser.avatarUrl}"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <Space
                        android:id="@+id/spc_name"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/match_constraint"
                        android:layout_marginTop="@dimen/_8sdp"
                        app:layout_constraintTop_toBottomOf="@id/iv_avatar" />

                    <TextView
                        android:id="@+id/tv_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/_16sdp"
                        android:layout_marginTop="@dimen/_8sdp"
                        android:layout_marginEnd="@dimen/_16sdp"
                        android:gravity="center_horizontal"
                        android:text="@{viewModel.selectedUser.name}"
                        android:textColor="@color/color_primary"
                        android:textSize="@dimen/text_24"
                        android:visibility="@{!viewModel.selectedUser.name.empty ? View.VISIBLE : View.GONE}"
                        app:layout_constraintTop_toBottomOf="@id/spc_name"
                        tools:text="Muhammad Arinal" />

                    <TextView
                        android:id="@+id/tv_username"
                        android:layout_width="@dimen/match_constraint"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_8sdp"
                        android:gravity="center_horizontal"
                        android:text="@{viewModel.selectedUser.login}"
                        android:textSize="@dimen/text_16"
                        app:layout_constraintEnd_toEndOf="@id/tv_name"
                        app:layout_constraintStart_toStartOf="@+id/tv_name"
                        app:layout_constraintTop_toBottomOf="@id/tv_name"
                        tools:text="arinal1" />

                    <View
                        android:id="@+id/v_separator"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_1sdp"
                        android:layout_marginTop="@dimen/_16sdp"
                        android:background="@color/color_light"
                        app:layout_constraintTop_toBottomOf="@+id/tv_username" />

                    <androidx.constraintlayout.widget.Group
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:visibility="@{!viewModel.selectedUser.company.empty ? View.VISIBLE : View.GONE}"
                        app:constraint_referenced_ids="iv_work, tv_work, tv_work_value, v_work_separator" />

                    <ImageView
                        android:id="@+id/iv_work"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:contentDescription="@string/work"
                        android:src="@drawable/ic_work"
                        app:layout_constraintBottom_toBottomOf="@id/tv_work_value"
                        app:layout_constraintStart_toStartOf="@id/tv_name"
                        app:layout_constraintTop_toTopOf="@id/tv_work" />

                    <TextView
                        android:id="@+id/tv_work"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/_16sdp"
                        android:layout_marginTop="@dimen/_16sdp"
                        android:text="@string/work"
                        app:layout_constraintStart_toEndOf="@+id/iv_work"
                        app:layout_constraintTop_toBottomOf="@+id/v_separator" />

                    <TextView
                        android:id="@+id/tv_work_value"
                        android:layout_width="@dimen/match_constraint"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_4sdp"
                        android:text="@{viewModel.selectedUser.company}"
                        android:textColor="@color/color_primary"
                        app:layout_constraintEnd_toEndOf="@id/tv_name"
                        app:layout_constraintStart_toStartOf="@id/tv_work"
                        app:layout_constraintTop_toBottomOf="@id/tv_work"
                        tools:text="Cermati" />

                    <View
                        android:id="@+id/v_work_separator"
                        android:layout_width="@dimen/match_constraint"
                        android:layout_height="@dimen/_1sdp"
                        android:layout_marginTop="@dimen/_16sdp"
                        android:background="@color/color_light"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="@+id/tv_work"
                        app:layout_constraintTop_toBottomOf="@+id/tv_work_value" />

                    <androidx.constraintlayout.widget.Group
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:visibility="@{!viewModel.selectedUser.location.empty ? View.VISIBLE : View.GONE}"
                        app:constraint_referenced_ids="iv_location, tv_location, tv_location_value, v_location_separator" />

                    <ImageView
                        android:id="@+id/iv_location"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:contentDescription="@string/location"
                        android:src="@drawable/ic_location"
                        app:layout_constraintBottom_toBottomOf="@id/tv_location_value"
                        app:layout_constraintStart_toStartOf="@id/tv_name"
                        app:layout_constraintTop_toTopOf="@id/tv_location" />

                    <TextView
                        android:id="@+id/tv_location"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/_16sdp"
                        android:layout_marginTop="@dimen/_16sdp"
                        android:text="@string/location"
                        app:layout_constraintStart_toEndOf="@+id/iv_location"
                        app:layout_constraintTop_toBottomOf="@+id/v_work_separator" />

                    <TextView
                        android:id="@+id/tv_location_value"
                        android:layout_width="@dimen/match_constraint"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_4sdp"
                        android:text="@{viewModel.selectedUser.location}"
                        android:textColor="@color/color_primary"
                        app:layout_constraintEnd_toEndOf="@id/tv_name"
                        app:layout_constraintStart_toStartOf="@id/tv_location"
                        app:layout_constraintTop_toBottomOf="@id/tv_location"
                        tools:text="Indonesia" />

                    <View
                        android:id="@+id/v_location_separator"
                        android:layout_width="@dimen/match_constraint"
                        android:layout_height="@dimen/_1sdp"
                        android:layout_marginTop="@dimen/_16sdp"
                        android:background="@color/color_light"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="@+id/tv_location"
                        app:layout_constraintTop_toBottomOf="@+id/tv_location_value" />

                    <androidx.constraintlayout.widget.Group
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:visibility="@{!viewModel.selectedUser.email.empty ? View.VISIBLE : View.GONE}"
                        app:constraint_referenced_ids="iv_email, tv_email, tv_email_value, v_email_separator" />

                    <ImageView
                        android:id="@+id/iv_email"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:contentDescription="@string/email"
                        android:src="@drawable/ic_email"
                        app:layout_constraintBottom_toBottomOf="@id/tv_email_value"
                        app:layout_constraintStart_toStartOf="@id/tv_name"
                        app:layout_constraintTop_toTopOf="@id/tv_email" />

                    <TextView
                        android:id="@+id/tv_email"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/_16sdp"
                        android:layout_marginTop="@dimen/_16sdp"
                        android:text="@string/email"
                        app:layout_constraintStart_toEndOf="@+id/iv_email"
                        app:layout_constraintTop_toBottomOf="@+id/v_location_separator" />

                    <TextView
                        android:id="@+id/tv_email_value"
                        android:layout_width="@dimen/match_constraint"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_4sdp"
                        android:text="@{viewModel.selectedUser.email}"
                        android:textColor="@color/color_primary"
                        app:layout_constraintEnd_toEndOf="@id/tv_name"
                        app:layout_constraintStart_toStartOf="@id/tv_email"
                        app:layout_constraintTop_toBottomOf="@id/tv_email"
                        tools:text="rinal@email.com" />

                    <View
                        android:id="@+id/v_email_separator"
                        android:layout_width="@dimen/match_constraint"
                        android:layout_height="@dimen/_1sdp"
                        android:layout_marginTop="@dimen/_16sdp"
                        android:background="@color/color_light"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="@+id/tv_email"
                        app:layout_constraintTop_toBottomOf="@+id/tv_email_value" />

                    <View
                        android:id="@+id/v_email"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/match_constraint"
                        android:background="?selectableItemBackground"
                        android:onClick="@{()->viewModel.sendEmail()}"
                        app:layout_constraintBottom_toBottomOf="@id/v_email_separator"
                        app:layout_constraintTop_toBottomOf="@id/v_location_separator" />

                    <androidx.constraintlayout.widget.Group
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:visibility="@{!viewModel.selectedUser.blog.empty ? View.VISIBLE : View.GONE}"
                        app:constraint_referenced_ids="iv_blog, tv_blog, tv_blog_value, v_blog" />

                    <ImageView
                        android:id="@+id/iv_blog"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:contentDescription="@string/blog"
                        android:src="@drawable/ic_link"
                        app:layout_constraintBottom_toBottomOf="@id/tv_blog_value"
                        app:layout_constraintStart_toStartOf="@id/tv_name"
                        app:layout_constraintTop_toTopOf="@id/tv_blog" />

                    <TextView
                        android:id="@+id/tv_blog"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/_16sdp"
                        android:layout_marginTop="@dimen/_16sdp"
                        android:text="@string/blog"
                        app:layout_constraintStart_toEndOf="@+id/iv_blog"
                        app:layout_constraintTop_toBottomOf="@+id/v_email_separator" />

                    <TextView
                        android:id="@+id/tv_blog_value"
                        android:layout_width="@dimen/match_constraint"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_4sdp"
                        android:text="@{viewModel.selectedUser.blog}"
                        android:textColor="@color/color_secondary"
                        app:layout_constraintEnd_toEndOf="@id/tv_name"
                        app:layout_constraintStart_toStartOf="@id/tv_blog"
                        app:layout_constraintTop_toBottomOf="@id/tv_blog"
                        tools:text="https://google.com" />

                    <View
                        android:id="@+id/v_blog"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/match_constraint"
                        android:background="?selectableItemBackground"
                        android:onClick="@{()->viewModel.goToBlog()}"
                        app:layout_constraintBottom_toBottomOf="@id/scp_blog"
                        app:layout_constraintTop_toBottomOf="@id/v_email_separator" />

                    <Space
                        android:id="@+id/scp_blog"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/match_constraint"
                        android:layout_marginTop="@dimen/_16sdp"
                        app:layout_constraintTop_toBottomOf="@+id/tv_blog_value" />

                    <com.facebook.shimmer.ShimmerFrameLayout
                        android:id="@+id/shimmer"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/color_on_primary"
                        app:bindLoading="@{viewModel.isLoading}"
                        app:layout_constraintTop_toTopOf="parent"
                        app:shimmer_duration="800"
                        tools:visibility="gone">

                        <include layout="@layout/item_shimmer_detail" />
                    </com.facebook.shimmer.ShimmerFrameLayout>

                    <TextView
                        android:id="@+id/tv_message"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/_24sdp"
                        android:gravity="center"
                        android:text="@{viewModel.errorMessage}"
                        android:textSize="@dimen/text_24"
                        android:visibility="@{!viewModel.errorMessage.empty &amp;&amp; !viewModel.isLoading ? View.VISIBLE : View.GONE}"
                        app:layout_constraintTop_toBottomOf="@id/tv_swipe"
                        tools:visibility="gone" />

                    <TextView
                        android:id="@+id/tv_swipe"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/_24sdp"
                        android:drawablePadding="@dimen/_4sdp"
                        android:gravity="center_horizontal"
                        android:text="@string/swipe_down_to_refresh"
                        android:textSize="@dimen/text_16"
                        android:textStyle="bold"
                        android:visibility="@{!viewModel.errorMessage.empty &amp;&amp; !viewModel.isLoading ? View.VISIBLE : View.GONE}"
                        app:drawableBottomCompat="@drawable/ic_arrow_down"
                        app:layout_constraintTop_toTopOf="parent"
                        tools:visibility="gone" />
                </androidx.constraintlayout.widget.ConstraintLayout>
            </ScrollView>
        </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
